--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
     "font-awesome": "~4.4.0",
-    "normalize-css": "normalize.css#~3.0.3"
+    "normalize-css": "normalize.css#~3.0.3",
+    "underscore": "~1.8.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
