--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-touch": "^1.3.0",
     "font-awesome": "~4.4.0",
     "normalize-css": "normalize.css#~3.0.3",
-    "underscore": "~1.8.3"
+    "underscore": "~1.8.3",
+    "moment": "momentjs#~2.10.6"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
